--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  
 }
 
 .container {
-  width: 100%;
+  width: 100vw;
   margin-inline: auto;
   background-color: #2364aa;
   padding: 20px;
@@ -77,7 +78,7 @@ body {
     center/cover no-repeat ;
    background-position: center;
   background-color: rgba(0, 0, 0, 0.3);
-  width: 100%;
+  width: 100vw;
   height: calc(100vh - 100px);
 }
 .info-hero {
@@ -178,7 +179,7 @@ body {
 .learn{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 1577px;
+  width: 100vw ;
   height: 100vh;
   padding: 2rem;
   background-color: #caf0f8;
@@ -260,6 +261,7 @@ footer{
   text-align: center;
   color: white;
   height: 30rem;
+  width: 100vw;
 
 }
 .links li {
@@ -282,6 +284,7 @@ footer{
   text-align: center;
   background-color: #3da5d9;
   color: white;
+  width: 100vw;
 }
 .footer-icon a{
   color: white;
@@ -302,6 +305,8 @@ footer{
   display: flex;
   margin-inline: 10px;
   margin-left: 5rem;
+  width: 100vw;
+  height: 100vh;
 }
 .contact-form{
   display: grid;
