--- a/style.css
+++ b/style.css
@@ -297,6 +297,7 @@ footer{
   margin-top: 15rem;
   margin-bottom: 15rem;
   display: flex;
+  margin-right: 3rem;
   margin-inline: 10px;
   margin-left: 3rem;
   width: 100vw;
