--- a/style.css
+++ b/style.css
@@ -356,6 +356,7 @@ textarea{
   margin-bottom: 15rem;
   margin-top: 15rem;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
 
 }
 .signin-form{
